Finalized color palette, established page layout and animated intro text.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,83 +1,129 @@
-/* vv Main color palette vv */
-:root {--steel-blue: #3B7EA9ff;
-  --olive-drab-7: #3A3014ff;
-  --light-gray: #C8D3D7ff;
-  --metallic-sunburst: #998044ff;
-  --steel-blue-2: #3B7EA9ff;
+/* imports */
+@import url('https://fonts.googleapis.com/css2?family=Expletus+Sans:wght@500&display=swap');
+
+/* Main color palette */
+:root {--rose-ebony: #594346ff;
+  --bittersweet: #ff715bff;
+  --navajo-white: #ffe0b5ff;
+  --cadet-blue: #51a3a3ff;
+  --spanish-bistre: #717744ff;
 }
-/* ^^ Main color palette ^^ */
 
 body {
   background-color: #C8D3D7ff;
+  font-family: 'Expletus Sans', cursive;
+  color: var(--platinum);
+  width: 100%;
+  margin: 0;
 }
 
 header {
-  background-color: #998044ff;
+  background-color: var(--rose-ebony);
   position: fixed;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
   left: 0;
   top: 0;
+  height: 75px;
   width: 100%;
 }
 
-@media (max-width: 500px) {
-  header {
-    flex-wrap: wrap;
-    height: 15vh;
-    justify-content: center;
-    align-items: center;
-  }
-  nav {
-    display: flex;
-    position: static;
-    width: 100%;
-    padding: 0 50px;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-  }
-  nav > ul {
-    flex-direction: column;
-  }
-  header > h1 {
-    position: relative;
-  }
-}
-
-header > h1 {
-  display: flex;
-  align-items: flex-start;
-  padding-left: 20px;
-  width: 60vw;
+@media (max-width: 600px) {
 }
 
 nav {
+  padding-right: 25px;
 }
 
 nav > ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  width: 35vw;
+  justify-content: flex-end;
+  width: 20vw;
 }
 
 nav > ul > li {
-  padding: 14px 16px;
+  padding: 5px 30px;
+  margin: 0 10px;
   list-style: none;
+  font-size: 1.45em;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: var(--navajo-white);
 }
 
-nav > ul> li > a:hover {
-  color: red;
+nav > ul > li:hover {
+  background-color: var(--cadet-blue);
 }
 
-nav > ul> li > a:hover {
-  color: blue;
+nav > ul > li:active {
+  background-color: var(--rose-ebony);
+  border-style: inset;
 }
 
 .nav-anchor {
   text-decoration: none;
-  color: black;
+  color: var(--navajo-white);
+}
+
+.container {
+  width: 100%;
+  left: 0;
+}
+
+#about {
+  background-color: var(--cadet-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  cursor: auto;
+}
+
+#intro-text {
+  padding: 275px 0;
+  font-size: 2.0em;
+}
+
+.name {
+  animation-name: name-move;
+  animation-duration: 2s;
+  position: relative;
+}
+
+.descr {
+  animation-name: descr-move;
+  animation-duration: 2s;
+  position: relative;
+}
+
+@keyframes name-move {
+  0% {right: 600px; top: 0px;}
+  100% {right: 0px; top: 0px;}
+}
+
+@keyframes descr-move {
+  0% {left: 600px; bottom: 0px;}
+  100% {left: 0px; bottom: 0px;}
+}
+
+
+#work {
+  background-color: var(--spanish-bistre);
+  width: 100%;
+  height: 800px;
+  margin: auto;
+}
+
+#contact {
+  background-color: var(--bittersweet);
+  width: 100%;
+  height: 800px;
+  margin: auto;
 }
