--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,10 @@ header {
 @media (max-width: 600px) {
 }
 
+a {
+    text-decoration: none;
+}
+
 nav {
   padding-right: 25px;
 }
@@ -65,13 +69,11 @@ nav > ul > li:active {
 }
 
 .nav-anchor {
-  text-decoration: none;
   color: var(--navajo-white);
 }
 
 .container {
   width: 100%;
-  left: 0;
 }
 
 #about {
@@ -119,6 +121,24 @@ nav > ul > li:active {
   width: 100%;
   height: 800px;
   margin: auto;
+  align-items: center;
+  text-align: center;
+  padding: 10rem 2rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 2rem;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 6rem;
+}
+
+.project-image {
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
 }
 
 #contact {
