--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@ header {
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 nav {
@@ -84,6 +84,7 @@ nav > ul > li:active {
   align-items: center;
   text-align: center;
   width: 100%;
+  margin: 0;
   height: 100vh;
   cursor: auto;
 }
@@ -119,31 +120,70 @@ nav > ul > li:active {
 #work {
   background-color: var(--spanish-bistre);
   width: 100%;
-  height: 800px;
-  margin: auto;
-  align-items: center;
+  height: auto;
   text-align: center;
-  padding: 10rem 2rem;
+  padding: 0;
+  margin: 0;
+}
+
+.work-header {
+  font-size: 3.0rem;
+  padding-top: 4.0rem;
+  margin: 0;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: 2rem;
-  width: 100%;
-  margin: 0 auto;
-  margin-bottom: 6rem;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
+  justify-content: space-around;
+  align-content: center;
+  margin: auto;
+  grid-gap: 5rem;
+  padding: 5rem 5rem;
 }
 
-.project-image {
-  height: 400px;
-  width: 400px;
-  object-fit: cover;
+.project-tile {
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: var(--navajo-white);
+}
+
+.grid-text {
+  margin: auto;
+  font-size: 1.5rem;
+
+}
+
+.project-anchor {
+}
+
+.project-title {
+  font-size: 1.5rem;
+  width: 250px;
+  background-color: var(--rose-ebony);
+  color: var(--navajo-white);
+  height: auto;
+  margin: -6px 0 0 0;
+  padding: 10px 0;
+  border-radius: 2px;
+  border-top: 2px solid var(--navajo-white);
+}
+
+.btn-show-all {
+  font-size: 1.5rem;
+  padding: 1.0rem 2.0rem;
+  margin-bottom: 4.0rem;
+  list-style: none;
+  border-radius: 2px;
+  border: 2px solid var(--navajo-white);
+  color: var(--navajo-white);
+  background-color: var(--rose-ebony);
 }
 
 #contact {
   background-color: var(--bittersweet);
   width: 100%;
-  height: 800px;
-  margin: auto;
+  height: auto;
 }
